# KNU_Parallel_Programming_MPI

./: CMakeLists.txt  MPI  README.md  main.cpp
